<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lista de la compra</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="pending">Compra pendiente</string>
    <string name="lstNoElements">No hay nada que comprar</string>
    <string name="newItem">Nuevo elemento</string>
    <string name="deleteItem">Eliminar elemento</string>
    <string name="editItem">Editar elemento</string>
    <string name="alrtDelete">Eliminar elemento</string>
    <string name="alrtDeleteEntry">Se va a eliminar un elemento. ¿Está seguro?</string>

    <string name="title_activity_item">Item</string>
    <string name="save">Guardar</string>

    <string name="price">Precio</string>
    <string name="importance">Importancia</string>
    <string name="place">Tienda</string>
    <string name="element">Producto</string>

    <string name="identificator">Identificador</string>

</resources>
